# mojio

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  project.md  project_structure.md  pyproject.toml  requirements-dev.txt  requirements.txt  review.md  setup_dev_env.bat  setup_dev_env.sh  task.md  tech-stack.md
.qoder/rules/: global.md
config/: default.yaml
src/: main.py
src/mojio/: __init__.py  exceptions.py
src/mojio/audio/: __init__.py  audio_input_interface.py  audio_manager.py  deep_learning_noise_reduction.py  loopback_input.py  microphone_input.py  noise_reduction.py  noise_reduction_interface.py  noise_reduction_manager.py  recognition_manager.py  silero_vad.py  simple_speaker_detection.py  speaker_detection_interface.py  speaker_detection_manager.py  transcription_interface.py  vad_interface.py  vad_manager.py  whisper_recognition.py
src/mojio/data/: __init__.py  config_manager.py  database_interface.py  database_manager.py  dictionary_interface.py  dictionary_manager.py  dictionary_matching.py  export_interface.py  export_manager.py  history_interface.py  history_manager.py  keyword_highlight.py  keyword_highlight_interface.py  matching_interface.py  matching_manager.py  profile_interface.py  profile_manager.py  punctuation_interface.py  punctuation_manager.py  simple_punctuation.py  sqlite_database.py  user_dictionary.py
src/mojio/gui/: __init__.py  main_window.py  settings_dialog.py
src/mojio/system/: __init__.py  pipeline_interface.py  pipeline_manager.py  pynput_shortcut.py  pynput_text_injection.py  realtime_pipeline.py  shortcut_interface.py  shortcut_manager.py  text_injection_interface.py  text_injection_manager.py
src/mojio/utils/: __init__.py  logger.py
tests/: __init__.py  test_audio_input.py  test_core_features.py  test_database.py  test_dictionary.py  test_dictionary_integration.py  test_dictionary_matching.py  test_error_handling.py  test_export.py  test_gui.py  test_history.py  test_integration.py  test_intelligent_features.py  test_keyword_highlight.py  test_matching.py  test_noise_reduction.py  test_noise_reduction_integration.py  test_pipeline.py  test_profile.py  test_punctuation.py  test_shortcut.py  test_speaker_detection.py  test_speech_recognition.py  test_text_injection.py  test_user_dictionary.py  test_utility_integration.py  test_vad.py
